@@ -81,7 +81,7 @@ MarkCodeFun <- function(codeListWidget=".codes_rqda"){
             rowid <- NextRowId("coding")
             success <- dbWriteTable(.rqda$qdacon,"coding",DAT,row.name=FALSE,append=TRUE)
             if (success){
-              markRange(from=ans$start,to=ans$end,rowid=rowid,addButton=TRUE,buttonLabel=SelectedCode)} else{gmessage("Fail to write to database.")}
+              markRange(widget=.rqda$.openfile_gui,from=ans$start,to=ans$end,rowid=rowid,addButton=TRUE,buttonLabel=SelectedCode)} else{gmessage("Fail to write to database.")}
           } else {
             Exist <- Exist1[,c("selfirst","selend","rowid")]
             Relations <- apply(Exist,1,FUN=function(x) relation(x[c("selfirst","selend")],c(ans$start,ans$end)))
@@ -95,7 +95,7 @@ MarkCodeFun <- function(codeListWidget=".codes_rqda"){
                 rowid <- NextRowId("coding")
                 success <- dbWriteTable(.rqda$qdacon,"coding",DAT,row.name=FALSE,append=TRUE)
                 if (success){
-                  markRange(from=ans$start,to=ans$end,rowid=rowid,addButton=TRUE,buttonLabel=SelectedCode)} else {gmessage("Fail to write to database.")}
+                  markRange(widget=.rqda$.openfile_gui,from=ans$start,to=ans$end,rowid=rowid,addButton=TRUE,buttonLabel=SelectedCode)} else {gmessage("Fail to write to database.")}
                 ## if there are no overlap in any kind, just write to database; otherwise, pass to else{}.
               } else {
                 del1 <- (Exist$Relation =="inclusion" & any(Exist$WhichMin==2,Exist$WhichMax==2))
@@ -124,7 +124,7 @@ MarkCodeFun <- function(codeListWidget=".codes_rqda"){
                   rowid <- NextRowId("coding")
                   success <- dbWriteTable(.rqda$qdacon,"coding",DAT,row.name=FALSE,append=TRUE)
                   if (success){
-                    markRange(from=Sel[1],to=Sel[2],rowid=rowid,addButton=TRUE,buttonLabel=SelectedCode)}else{gmessage("Fail to write to database.")}
+                    markRange(widget=.rqda$.openfile_gui,from=Sel[1],to=Sel[2],rowid=rowid,addButton=TRUE,buttonLabel=SelectedCode)}else{gmessage("Fail to write to database.")}
                 }
               }}}}}}}}
 
